--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.8.0",
+    "axios": "^1.8.4",
+    "formidable": "^3.5.2",
+    "imagekit": "^6.0.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
+    "multiparty": "^4.2.3",
+    "next": "15.2.4",
+    "next-auth": "^4.24.11",
+    "order": "^0.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.15.0",
+    "react-sweetalert2": "^0.6.0",
+    "sortablejs": "^1.15.6"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "3"
   }
 }
